# qbar

./: .clangd  .gitignore  .gitmodules  LICENSE  README.md  config.json  config.schema.json  meson.build  meson_options.txt  qmldir  readme_ai.md
.github/workflows/: build.yml  ci.yml  tests.yml
aur/: .SRCINFO  PKGBUILD  README.md
config/: config.json  style.css
config/themes/: aqua-glass-notify.css  aqua-glass.css  bliss-xp.css  catppuccin-frappe.css  catppuccin-latte.css  catppuccin-macchiato.css  catppuccin-mocha.css  circuit-bloom.css  dracula.css  ember-terminal.css  everforest-dark.css  gruvbox-dark.css  gruvbox-light.css  high-contrast.css  kanagawa.css  latte-2.css  macchiato-notify.css  macchiato.css  material-ocean.css  mojave-drift.css  neon-shrine-notify.css  neon-shrine.css  nord-notify.css  nord.css  one-dark.css  palenight.css  paper-sun.css  rose-pine.css  solarized-dark.css  solarized-light.css  tokyo-night-notify.css  tokyo-night.css  tundra-signal.css  vinyl-dusk.css
config/widgets/: Bitcoin.qml  BitcoinPopup.qml  Crypto.qml  CryptoPopup.qml  ExampleWidget.qml  SpeedTest.qml  SpeedTestPopup.qml  Weather.qml  WeatherBackdrop.qml  WeatherPopup.qml  Wmo.js
data/: config.example.json  qbar-defaults.qrc  qbar-lock.desktop  qbar.desktop
data/pam/: qbar-lock  qbar-lock-face
data/themes/: bliss-98-lock.css  i3lock.css  macchiato-lock.css
docker/: .gitignore  Dockerfile  i3.config  inside.sh  qbar-config.json  run.sh  session.sh  waybar-style.css
docs/: conf.py  configuration.rst  custom-tools.rst  index.rst  known-issues.md  lock-screen.rst  notifications.rst  theming.rst  tray-icon-resolution.md  window-manager-backends.md
i18n/: meson.build  qbar-i18n.qrc  qbar-lock-i18n.qrc  qbar-lock_de.ts  qbar-lock_es.ts  qbar-lock_fr.ts  qbar-lock_pt_BR.ts  qbar-lock_pt_PT.ts  qbar_de.ts  qbar_es.ts  qbar_fr.ts  qbar_pt_BR.ts  qbar_pt_PT.ts
protocols/: wlr-layer-shell-unstable-v1.xml
qml/: Bar.qml  qbar-lock.qrc  qbar-shaders.qrc.in  qbar.qrc
qml/applets/: Battery.qml  Bluetooth.qml  Brightness.qml  CPU.qml  Caffeine.qml  Calendar.qml  Clock.qml  CustomTool.qml  Disk.qml  Dock.qml  FailedUnits.qml  I3Mode.qml  KeyboardState.qml  Load.qml  Media.qml  Memory.qml  Mpd.qml  Network.qml  NetworkManager.qml  PowerProfiles.qml  Privacy.qml  Scratchpad.qml  Sound.qml  Taskbar.qml  Temperature.qml  Title.qml  Tray.qml  UPower.qml  User.qml  Workspaces.qml  XInput.qml
qml/lock/: LockScreen.qml  LockScreenRing.qml
qml/popups/: BatteryPopup.qml  CPUPopup.qml  CPUTooltip.qml  CalendarPopup.qml  DiskPopup.qml  MediaPopup.qml  NetworkPopup.qml  SystemdPopup.qml  TooltipPopup.qml  UPowerPopup.qml  UserPopup.qml
qml/qbar/: BatteryIcon.qml  Contrast.js  CssDropShadow.qml  CssEnable.qml  CssFill.qml  CssIcon.qml  CssRect.qml  CssText.qml  DismissOverlay.qml  DockSurface.qml  Fetch.js  Format.js  Group.qml  Json.js  MarqueeText.qml  MenuPopup.qml  NotificationCard.qml  NotificationSurface.qml  Popup.qml  PopupShell.qml  Tooltip.qml
qml/shaders/: PopupEmboss.frag  coverflow.frag  coverflow_harness.qml
scripts/: btc.py  dollar.py
src/: applethost.cpp  applethost.h  barwindow.cpp  barwindow.h  capsule.h  config.cpp  config.h  configreloader.cpp  configreloader.h  crashguard.cpp  crashguard.h  main.cpp  thememanager.cpp  thememanager.h
src/battery/: batterymodel.cpp  batterymodel.h
src/bluetooth/: bluetoothmodel.cpp  bluetoothmodel.h
src/brightness/: brightnessmodel.cpp  brightnessmodel.h
src/caffeine/: caffeinemodel.cpp  caffeinemodel.h
src/calendar/: calendarmodel.cpp  calendarmodel.h
src/cpu/: cpumodel.cpp  cpumodel.h
src/css/: csstheme.cpp  csstheme.h  valueparser.cpp  valueparser.h
src/customtool/: customtoolmodel.cpp  customtoolmodel.h
src/dbus/: dbusservice.cpp  dbusservice.h
src/disk/: diskmodel.cpp  diskmodel.h
src/graphics/: sparkline.cpp  sparkline.h
src/ipc/: i3ipcclient.cpp  i3ipcclient.h
src/json/: jsonc.cpp  jsonc.h
src/lock/: fprintauthenticator.cpp  fprintauthenticator.h  lockbackend.cpp  lockbackend.h  lockcontroller.cpp  lockcontroller.h  lockmain.cpp  pamauthenticator.cpp  pamauthenticator.h  waylandlockbackend.cpp  waylandlockbackend.h  x11lockbackend.cpp  x11lockbackend.h
src/mpd/: mpdmodel.cpp  mpdmodel.h
src/mpris/: mprismodel.cpp  mprismodel.h
src/network/: networkmodel.cpp  networkmodel.h  networkprocessmodel.cpp  networkprocessmodel.h
src/networkmanager/: networkmanagermodel.cpp  networkmanagermodel.h
src/notifications/: notificationmodel.cpp  notificationmodel.h  notificationserver.cpp  notificationserver.h  notificationwindow.cpp  notificationwindow.h
src/platform/: capslockmonitor.cpp  capslockmonitor.h  keyboardlayoutcode.cpp  keyboardlayoutcode.h  platformbarintegration.cpp  platformbarintegration.h  waylandlayershellintegration.cpp  x11barintegration.cpp  x11keyboardlayout.cpp  x11keyboardlayout.h
src/powerprofiles/: powerprofilesmodel.cpp  powerprofilesmodel.h
src/privacy/: privacymodel.cpp  privacymodel.h
src/qml/: baractions.cpp  baractions.h  dockwindow.cpp  dockwindow.h  enginebootstrap.cpp  enginebootstrap.h  jsonasync.cpp  jsonasync.h  jsprocess.cpp  jsprocess.h  jstimers.cpp  jstimers.h  localstorage.cpp  localstorage.h  modelcapsules.cpp  modelcapsules.h  netfetch.cpp  netfetch.h  qbaripc.cpp  qbaripc.h  qbarpopupservice.cpp  qbarpopupservice.h  widgetreloader.cpp  widgetreloader.h
src/sound/: audiobackend.cpp  audiobackend.h  audiobackendfactory.cpp  audiobackendfactory.h  soundmodel.cpp  soundmodel.h  wireplumberbackend.cpp  wireplumberbackend.h
src/system/: failedunitsmodel.cpp  failedunitsmodel.h  keyboardstatemodel.cpp  keyboardstatemodel.h  loadmodel.cpp  loadmodel.h
src/tools/: qbaripccli.cpp
subprojects/: qml-css-engine
tests/: qmltests.cpp  qmltests.h  test_css.cpp  test_css.h  test_customtool.cpp  test_customtool.h  test_jsonasync.cpp  test_jsonasync.h  test_jsonc.cpp  test_jsonc.h  test_localstorage.cpp  test_localstorage.h  test_tray.cpp  test_tray.h  test_wm.cpp  test_wm.h
tools/: dump_calendar_events.py  dump_evolution_cache_events.py  qmlls  qtd-decode.py
(+38 files in other folders)
